Update go version 1.21

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,7 +3,13 @@ run:
 
 linters:
   enable:
-    - revive
+    #- revive
+    - goconst
+    - goimports
+    - stylecheck
+    #- unparam
+    - staticcheck
+    - unused
 
 issues:
   exclude:
