--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -8,44 +8,75 @@ on:
     - 'v*'
   pull_request:
 
+env:
+  EVENT_NUMBER: ${{ github.event.number }}
+  COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+  MIN_TESTCOV: 80
+  # A unique number for each workflow run within a repository.
+  # This number does not change if you re-run the workflow run.
+  RUN_ID: ${{ github.run_id }}
+  # A unique number for each run of a particular workflow in a repository.
+  # This number begins at 1 for the workflow's first run, and increments with each new run.
+  # This number does not change if you re-run the workflow run.
+  RUN_NUMBER: ${{ github.run_number }}
+  # A unique number for each attempt of a particular workflow run in a repository.
+  # This number begins at 1 for the workflow run's first attempt, and increments with each re-run.
+  RUN_ATTEMPT: ${{ github.run_attempt }}
+  PULL_NUMBER: ${{ github.event.pull_request.number }}
+
 jobs:
 
-  context-info:
+  detect-noop:
     runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.noop.outputs.should_skip }}
+      paths_result: ${{ steps.noop.outputs.paths_result }}
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJSON(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Repo info
+      - name: Detect No-op Changes
+        # https://github.com/fkirc/skip-duplicate-actions
+        id: noop
+        uses: fkirc/skip-duplicate-actions@v5.3.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          paths_ignore: '["**.md", "**.png", "**.jpg", "**/Documentation/**"]'
+          do_not_skip: '["push","schedule","release"]'
+          concurrent_skipping: false
+          paths_filter: |
+            go:
+              paths:
+                - '**/*.go'
+            version:
+              paths:
+                - '.VERSION'
+
+      - name: vars
         run: |
-          curl -s \
-          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-          --header "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/${{ github.repository }}
+          echo "EVENT_NUMBER: ${{env.EVENT_NUMBER}}"
+          echo "COMMIT_SHA: ${{env.COMMIT_SHA}}"
+          echo "PULL_NUMBER: ${{env.PULL_NUMBER}}"
+          echo "RUN_ID: ${{env.RUN_ID}}"
+          echo "RUN_NUMBER: ${{env.RUN_NUMBER}}"
+          echo "RUN_ATTEMPT: ${{env.RUN_ATTEMPT}}"
+
   UnitTest:
     runs-on: ubuntu-latest
-    env:
-      ITEST_IMAGE_TAG: rc-${{ github.event.number }}
-      COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
-      RUN_ID: ${{ github.run_id }}
-      PULL_NUMBER: ${{ github.event.pull_request.number }}
-      MIN_TESTCOV: 80
+    needs:
+      - detect-noop
 
     steps:
     - name: Create code coverage status for the current commit
-      if: github.event_name == 'pull_request'
+      if: github.event_name == 'pull_request' && github.actor != 'dependabot[bot]' && needs.detect-noop.outputs.should_skip != 'true'
       run: |
         curl "https://${GIT_USER}:${GIT_TOKEN}@api.github.com/repos/${GITHUB_REPOSITORY}/statuses/${COMMIT_SHA}" -d "{\"state\": \"pending\",\"target_url\": \"https://github.com/${GITHUB_REPOSITORY}/pull/${PULL_NUMBER}/checks?check_run_id=${RUN_ID}\",\"description\": \"in progress — This check has started... \",\"context\": \"code cov\"}"
       env:
-        GIT_TOKEN: ${{ secrets.BUILDER_PAT }}
-        GIT_USER: ${{ secrets.GIT_USER }}
+        GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GIT_USER: ${{ github.actor }}
 
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v5
       with:
         go-version-file: go.mod
 
@@ -56,7 +87,7 @@ jobs:
       run: make build covtest
 
     - name: Generate covarege Status
-      if: github.event_name == 'pull_request'
+      if: github.event_name == 'pull_request' && github.actor != 'dependabot[bot]' && needs.detect-noop.outputs.should_skip != 'true'
       run: |
         set -x
         PROJECT_NAME=${PROJECT_NAME}
@@ -66,11 +97,31 @@ jobs:
         (( $(echo "$total > ${MIN_TESTCOV}" | bc -l) )) && STATE=success || STATE=failure
         curl "https://${GIT_USER}:${GIT_TOKEN}@api.github.com/repos/${GITHUB_REPOSITORY}/statuses/${COMMIT_SHA}" -d "{\"state\": \"${STATE}\",\"target_url\": \"https://github.com/${GITHUB_REPOSITORY}/pull/${PULL_NUMBER}/checks?check_run_id=${RUN_ID}\",\"description\": \"${total}%\",\"context\": \"code cov\"}"
       env:
-        GIT_TOKEN: ${{ secrets.BUILDER_PAT }}
-        GIT_USER: ${{ secrets.GIT_USER }}
+        GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GIT_USER: ${{ github.actor }}
 
     - name: coveralls
-      #if: github.event_name == 'pull_request'
+      if: github.event_name == 'pull_request' && github.actor != 'dependabot[bot]' && needs.detect-noop.outputs.should_skip != 'true'
       env:
         COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: make coveralls-github
+
+    - name: set-tag
+      run: |
+        VERSION=$(cat .VERSION).${{env.RUN_NUMBER}}
+        echo "VERSION: ${VERSION}"
+        echo "DIST_VERSION=${VERSION}" >> $GITHUB_ENV
+        echo "git tag ${VERSION}"
+
+    - name: Create Tag
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push' && needs.detect-noop.outputs.paths_result.version != 'true'
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const {DIST_VERSION} = process.env          
+          github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `refs/tags/${DIST_VERSION}`,
+              sha: context.sha
+          })
