--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -74,6 +74,8 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Fetch History
+      run: git fetch --prune --unshallow
 
     - name: Install Go
       uses: actions/setup-go@v5
